--- a/_includes/header.html
+++ b/_includes/header.html
@@ -337,7 +337,7 @@
 				<div class="timeline-content">
 					<h2>201910</h2>
 					<p><a href="{{site.baseurl}}/posts/20191006">
-						2019.10.06：选统筹
+						2019.10.06：选统筹 / 小蜜蜂
 					</a></p>
 					<p><a href="{{site.baseurl}}/posts/20191009">
 						2019.10.09：捧场王
